fixtures/cell_env/invalid/03_duplicate_declaration.sea
Cell "Dup"
    @profile "python-agent-v1"

Mount "workspace"
    @source "."
    @target "/workspace"

Mount "workspace"
    @source "./other"
    @target "/other"
